# tauri-template

./: .gitattributes  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml
public/: platform-config.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/layout/: index.vue
src/router/: index.ts
src/router/modules/: fighting.ts
src/utils/http/: index.ts  types.d.ts
src/views/fighting/: effect.vue  index.vue
src/views/login/: index.vue  index2.vue
src/views/login/compontents/: header.vue
src/views/login/utils/: header.ts  rule.ts
src/views/task/: index.vue
src/views/welcome/: index.vue
