[package]
name = "pxq_client"
version = "5.6.0"
description = "pxq_client"
license = "MIT"
default-run = "pxq_client"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.41.1", features = ["full"] }
tauri-plugin-shell = "2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
